# GameEngine

./: .gitignore  package.json
client/: CMakeLists.txt
client/src/: main.cpp
engine/: CMakeLists.txt
engine/assets/shaders/: TriangleFragment.glsl  depth.f.glsl  depth.v.glsl  depthQuad.f.glsl  fog.f.glsl  fog.v.glsl  hud.f.glsl  hud.v.glsl  light.f.glsl  model.fs  model.vs  pass_through.v.glsl  shadowMapping.f.glsl  shadowMapping.v.glsl  simple_3d.fs  simple_3d.vs  skybox.frag  skybox.vert  sprite.f.glsl  triangle.f.glsl  triangle.v.glsl  world.f.glsl  world.v.glsl
engine/include/: renderer.h
engine/include/engine/: baseObject.cpp  baseObject.h  bodyBase.h  camera.h  context.h  engine.cpp  engine.h  logger.cpp  logger.h  mesh.h  model.h  opengl_headers.h  renderObject.cpp  renderObject.h  renderer.cpp  renderer.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  shader.cpp  shader.h  skybox.cpp  skybox.h  spriteRenderer.h  terrain.h  text.cpp  texture.cpp  texture.h
engine/include/engine/objects/: cube.cpp  cube.h
engine/include/engine/objects/button/: button.cpp  button.h
engine/src/: engine.cpp  engine.h  renderer.h
game/: .gitignore  CMakeLists.txt
game/assets/heightmaps/: Europe 2048_1024.png.title
game/assets/models/House1/: house1.blend  house1.blend1  house1.mtl
game/assets/models/boulder/: newboulder.mtl
game/assets/shaders/: debug_quad.frag  debug_quad.fs  debug_quad.vert  shadowMapping.f.glsl  shadowMappingDepth.f.glsl  shadowMappingDepth.v.glsl  shadow_mapping.fs  sunlight.frag  sunlight.vert  sunlightDepth.frag  sunlightDepth.vert
game/assets/terrains/: terrain1.mtl
game/engine/assimp/: DartConfiguration.tcl  Makefile  assimp.pc  cmake_install.cmake  revision.h
game/engine/assimp/code/: Makefile  cmake_install.cmake
game/engine/assimp/contrib/: Makefile  cmake_install.cmake
game/engine/assimp/contrib/irrXML/: Makefile  cmake_install.cmake
game/engine/assimp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
game/engine/assimp/test/headercheck/: CTestTestfile.cmake  Makefile  cmake_install.cmake
game/engine/assimp/tools/assimp_cmd/: Makefile  cmake_install.cmake
game/engine/glfw-3.3/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
game/engine/glfw-3.3/examples/: Makefile
game/engine/glfw-3.3/src/: Makefile  cmake_install.cmake
game/engine/glfw-3.3/tests/: Makefile
game/engine/json/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  nlohmann_jsonTargets.cmake
game/src/: main.cpp
game/src/objects/: floor.cpp  floor.h  player.cpp  player.h  test.cpp  test.h
game/src/scenes/: menu.cpp  world.cpp
game/web/: index.html
server/: package.json
server/src/: server.js
